# Cheatos

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-release.yml  publish.yml  python-publish.yml  release-publish.yml  test-and-lint.yml
cheatos/: cli.py  commands.py  completers.py  io.py  utils.py
