[project]
name = "cheatos"
version = "0.2.0"
description = "Cheatos: Your terminal post-it notes manager"
authors = [
    {name = "Gorbiel", email = "tba@example.com"}
]
dependencies = ["appdirs"]
requires-python = ">=3.7"

[project.scripts]
cheatos = "cheatos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"